--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ web-sys = { version = "0.3", features = ["console"] }
 rkyv = {version = "0.7.20", features=["validation"]}
 rkyv_dyn = "0.7.20"
 rkyv_typename = "0.7.20"
+ptr_meta = "0.1.3"
 bytecheck = "0.6.5"
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
