--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
     "cSpell.words": [
         "accum",
         "jsstring",
+        "pids",
+        "pqueue",
+        "prio",
+        "ptype",
         "rkyv",
         "rustyscreeps"
     ]
