--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ rkyv_dyn = "0.7.20"
 rkyv_typename = "0.7.20"
 ptr_meta = "0.1.3"
 bytecheck = "0.6.5"
+impl-enum = "0.2.0"
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
